--- a/04/04 copy.html
+++ b/04/04 copy.html
@@ -8,9 +8,8 @@
 
   <!-- 외부 스타일,추후 다시 공부 -->
   <script src="./04.js"></script>
-
   <link rel="stylesheet" type="text/css" href="../index.css">
-  <link rel="stylesheet" type="text/css" href="./04.css">
+
 </head>
 
 <body>
@@ -24,27 +23,12 @@
         자바스크립트 주사위게임
       </div>
       <div id="divContent">
-        <div>
-          <div>
-            <h1>computer</h1>
-            <img id='com' src="./img/1.png">
-          </div>
-          <div>
-            <h1>user</h1>
-            <img id="user" src="./img/1.png">
-          </div>
-        </div>
-        <div>
-          <button>1선택</button>
-          <button>2선택</button>
-          <button>3선택</button>
-          <button>4선택</button>
-          <button>5선택</button>
-          <button>6선택</button>
-        </div>
-        <div id="msg">
-            
-        </div>
+        <p>
+          <img src="./img/1.png">
+        </p>
+        <p>
+          <button>주사위를 던져주세요</button>
+        </p>
       </div>
     </section>
 
