--- a/04/04.html
+++ b/04/04.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>주사위게임</title>
 
-  <!-- 외부 스타일,추후 다시 공부 -->
   <script src="./04.js"></script>
 
   <link rel="stylesheet" type="text/css" href="../index.css">
@@ -17,7 +16,7 @@
   <main>
     <header>
       <h1>자바스크립트 기초</h1>
-      <div><a href='../index.html'>홈</a></div>
+      <div><a id= 'home' href='../index.html'>홈</a></div>
     </header>
     <section>
       <div id="divTitle">
@@ -42,13 +41,10 @@
           <button>5선택</button>
           <button>6선택</button>
         </div>
-        <div id="msg">
-            
+        <div id="msg">           
         </div>
       </div>
     </section>
-
   </main>
 </body>
-
 </html>
