--- a/05/05 copy.html
+++ b/05/05 copy.html
@@ -1,33 +1,51 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>주사위업다운</title>
-  <script src='./05.js'></script>
-<link rel='stylesheet' type='text/css' href='../index.css'> 
+  <script src="../04/04 copy.js"></script>
+  <link rel="stylesheet" type="text/css" href="../index.css">
+  <link rel="stylesheet" type="text/css" href="../04/04.css">
+
 </head>
-
 <body>
-  <main>
-    <header>
-      <h1>자바스크립트 기초</h1>
-      <div><a href="../index.html">홈</a></div>
-    </header>
-    <section>
-      <div id='divTitle'>
-        자바스크립트 업다운게임
-      </div>
-      <div id='divContent'>
+<main>
+  <header>
+    <h1>자바스크립트 기초</h1>
+    <div><a href="../index.html">홈</a></div>
+  </header>
+  <section>
+    <div id="divTitle">자바스크립트 주사위업다운</div>
+    <div id="divContent">
+      <div>
         <div>
+          <div> 
+            <h1>computer</h1>
+            <img id="com" src="../04/img/1.png">
+          </div>
+          <div>
+            <h1>User</h1>
+            <img id="user" src="../04/img/1.png">
+          </div>
+        </div>
 
+        <div>
+          <button>버튼 1</button>
+          <button>버튼 2</button>
+          <button>버튼 3</button>
+          <button>버튼 4</button>
+          <button>버튼 5</button>
+          <button>버튼 6</button>
         </div>
-        <div id='msg'>
-        </div>
+        
+        <div id="msg"></div>
       </div>
-    </section>
-  </main>
-</body>
+    </div>
 
+  </section>
+
+</main>
+  
+</body>
 </html>
