--- a/03/03.html
+++ b/03/03.html
@@ -22,7 +22,7 @@
   <main>
     <header>
       <h1>자바스크립트 기초</h1>
-      <div>홈</div>
+      <div><a id= 'home' href="../index.html">홈</a></div>
     </header>
     <section>
       <div id='msg'>??</div>
